@@ -9,7 +9,7 @@
         android:id="@+id/subscription_empty"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:padding="10dp"
+        android:layout_marginTop="@dimen/header_bar_height"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp">
 
@@ -18,8 +18,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:layout_marginRight="15dp"
-            android:textSize="60dp"
+            android:layout_marginRight="10dp"
+            android:textSize="100dp"
             android:text="↑"/>
 
         <TextView
